maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:15: error: not found: value keeHandOnSideWall
      keeHandOnSideWall()
      ^PledgeMaze:41: error: not found: value sommeAngle
      sommeAngle += 1
      ^PledgeMaze:47: error: not found: value sommeAngle
      sommeAngle += 1
      ^PledgeMaze:52: error: not found: value sommeAngle
    sommeAngle -= 1
    ^